Added export functionality for calbes

--- a/TraysFastUpdate/Components/Pages/CablePages/Index.razor
+++ b/TraysFastUpdate/Components/Pages/CablePages/Index.razor
@@ -30,7 +30,8 @@
                 Add cable from file
             </MudButton>
         </ActivatorContent>
-    </MudFileUpload>
+    </MudFileUpload>    
+    <MudButton Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.SimCardDownload" DropShadow="false" OnClick="@(() => ExportCablesTableAsync())">Export Full Report</MudButton>
 </MudItem>
 
 <MudPaper Elevation="0" Class="pa-1 ma-2" Style="@($"background: #BDBDBD;")">
@@ -151,4 +152,18 @@
         await CommittedItemChanges(item);
     }
 
+    private async Task ExportCablesTableAsync()
+    {
+        try
+        {
+            await CableService.ExportCablesTableEntriesAsync();
+            Snackbar.Add("Cable table was exported successfully!", Severity.Success);
+        }
+        catch (Exception ex)
+        {
+            Snackbar.Add(ex.Message, Severity.Error);
+        }
+    }
+
 }
+
